linkerd-multicluster/west/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-mesh-ns
  annotations:
    linkerd.io/inject: enabled
